test/sema/typeck/impl/extension-struct-type-param-err.dora
struct Foo[T](T)
impl Foo[Float32] { fn bar() {} }
fn f(x: Foo[Int32]) { x.bar() }
